<resources>
    <string name="placeholderNameSurname">WITAJ IMIE NAZWISKO!</string>
    <string name="app_name">E-DZIENNIK</string>
    <string name="login">Logowanie</string>
    <string name="log_in">Zaloguj</string>
    <string name="log_out">Wyloguj</string>
    <string name="go_back">Wróć</string>
    <string name="register">Register</string>
    <string name="username">Wpisz login</string>
    <string name="email">Email address</string>
    <string name="password">Wpisz hasło</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="chose_role">Wybierz rolę:</string>
    <string name="mathematics">MATEMATYKA</string>
    <string name="polish">JĘZYK POLSKI</string>
    <string name="english">JĘZYK ANGIELSKI</string>
    <string name="grade">OCENA:</string>
    <string name="weight">WAGA:</string>
    <string name="description">OPIS:</string>
    <string name="null_placeholder"> :</string>
    <string name="settings">USTAWIENIA</string>
    <string name="day1">PONIEDZIAŁEK:</string>
    <string name="day2">WTOREK:</string>
    <string name="day3">ŚRODA:</string>
    <string name="day4">CZWARTEK:</string>
    <string name="day5">PIĄTEK:</string>

</resources>