<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="11dp">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/grade"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/null_placeholder"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/weight"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/null_placeholder"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/description"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/null_placeholder"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>